# switchboard-rs-oss

./: .agent_done_2  .cargoignore  .fix_done_3  .fix_done_4  .fix_done_5  .fixes_complete  .gitignore  .kilocodemodes  .refactor_done_1  ARCHITECTURE.md  BACKWARDS_COMPATIBILITY_SKILLS.md  BLOCKERS.md  BUGS.md  BUGS_CURRENT.md  BUGS_NEW.md  BUGS_TODO.md  BUGS_TODO_CURRENT.md  BUG_002_ANALYSIS.md  CHANGELOG.md  COMPLETED.md  CURRENT_TASK.md  Cargo.toml  DEFERRED_TASKS.md  DEV_TODO1.md  DEV_TODO2.md  Dockerfile  EXECUTION_REPORT.md  FINAL_QA_FINDINGS.md  FRONTEND_PRD.md  LEARNINGS.md  PHASE1_TEST_RESULTS.md  PHASE3_CODE_REVIEW.md  PUBLIC_API_INVENTORY.md  QA_CONTEXT_SUMMARY.md  QA_REVERIFY_RESULTS.md  QA_TEST_RESULTS.md  README.md  REVIEW_QUEUE.md  TEST_COVERAGE_REPORT.md  TODO1.md  (+14 more)
.cargo/: config.toml
.github/: coverage-baseline.json
.switchboard/: LEARNINGS.md  heartbeat.json  instances.json
addtl-features/: discord-agent.md.backlog.md  skills-feature-continued.md  skills-feature-continued.md.backlog.md  skills-feature.md.backlog.md  skills-improvements.ms  testability-enhancement-feature.md.backlog.md
docs/: CRATES_IO_PUBLISHING.md  INDEX.md  INSTALLATION.md  INSTALLATION_TROUBLESHOOTING.md  LOG_PREFIX_FORMATS.md  MACOS_TESTING_PROCEDURE.md  NETWORK_FAILURE_HANDLING.md  PERFORMANCE_SKILLS_INSTALL.md  PERFORMANCE_SKILLS_LIST.md  README.md  RELIABILITY_TESTS.md  TESTABILITY_ENHANCEMENT_PLAN.md  agents.md  api-reference.md  cli-reference.md  configuration.md  cron-scheduling.md  discord-tools.md  discord.md  installation.md  metrics.md  setup.md  skills.md  troubleshooting.md  workflows.md
examples/: advanced.toml  basic.toml  skills-example.toml
plans/: IMPLEMENTATION_PLAN_GAPS.md  PLAN_env_file_migration.md  api-test-coverage-plan.md  cli-ui-improvements-plan.md  detach-fix-plan.md  discord-multi-agent-gateway-plan.md  discord_gateway_migration_plan.md  gateway-auto-connect-plan.md  gpu-passthrough-toggle-plan.md  manifest-skills-auto-install-plan.md  manifest-toml-implementation-plan.md  prompt-path-bugfix-plan.md  rest-api-plan.md  scaffolding-commands-plan.md  scheduler-status-test-plan.md  scheduler-up-down-api-plan.md  silent-timeout-plan.md  silent-timeout-test-coverage-plan.md  skills-feature-remaining-work.md  workflows-implementation-plan.md
reports/: codebase-scan-20260302-025414.md  codebase-scan-discord-agent-20260222-055118.md
scripts/: check-coverage-ratchet.sh  check-new-code-coverage.sh  generate-coverage.sh  test-install.sh  test-platform-compatibility.sh
skills/: DISCLI.md  README.md  skills.lock.json
src/: lib.rs  logging.rs  main.rs
summarizer-narratives/: 2026-02-21-11-00-05.md  (+137 more)
(+753 files in other folders)
